k8s/01-genesis-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genesis-dashboard
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: genesis-dashboard
  template:
    metadata:
      labels:
        app: genesis-dashboard
    spec:
      containers:
        - name: genesis-dashboard
          image: uhub.service.ucloud.cn/entropypool/genesis-dashboard:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: genesis-dashboard
  namespace: kube-system
spec:
  ports:
    - name: api
      port: 80
      targetPort: 80
  selector:
    app: genesis-dashboard
