k8s/02-traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: genesis-dashboard-ingress-vpn
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: genesis-dashboard-nginx
    k8s.kuboard.cn/workload: genesis-dashboard-nginx
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  tls:
    - secretName: internal-devops-cert
  rules:
    - host: genesis.internal-devops.development.xpool.top
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: genesis-dashboard
              servicePort: 80
